# price_compare

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  example.env  price.py  pyproject.toml  render.yaml  requirements.txt
src/agents/: base_agent.py  live_searcher.py  orchestrator.py  product_matcher.py  property_extractor.py
src/api/: main.py
src/api/middleware/: tracing.py
src/api/routes/: auth.py  dataset.py  feedback.py  products.py  search.py
src/config/: settings.py
src/database/: chroma_manager.py  models.py  sqlite_manager.py
src/pipeline/: batch_processor.py  embeddings.py  klarna_parser.py
src/services/: category_service.py  clip_service.py  embedding_service.py  encryption_service.py  llm_service.py  metrics_service.py  search_service.py  trends_service.py
src/web/static/css/: styles.css
src/web/static/js/: app.js
src/web/templates/: index.html
